correction of  word

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			</div>
 			<div class="div-sec2">
 				<img src="images/img2.jpg" alt="computers" height="200px" width="200px">
-				<p>Here you can get imfrormations about computers, their capacities ans all.</p>
+				<p>Here you can get imfrormations about computers, their capacities and all.</p>
 			</div>
 			<div class="div-sec2">
 				<img src="images/img3.jpg" alt="tutorials" height="200px" width="200px">
